--- a/P1/P1.ipynb
+++ b/P1/P1.ipynb
@@ -182,19 +182,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sim \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(sims):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m coroas\u001b[38;5;241m!=\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 11\u001b[0m         valor \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m         lancamentos[N] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     13\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m valor \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "sims = 10000\n",
-    "N = 10\n",
     "\n",
-    "#for sim in range(sims):\n",
-    "moedas = [np.random.randint(2)]*N\n",
-    "    \n",
-    "print(moedas)"
+    "def jogar_moeda(qtd:int): -> np.array\n",
+    "    arr = []\n",
+    "    for _ in qtd:\n",
+    "        valor = np.random.randint(2)\n",
+    "        arr.append(valor)\n",
+    "    return np.array(arr)\n",
+    "\n",
+    "sims = 100000\n",
+    "Ns = 1000\n",
+    "lancamentos = np.zeros(Ns)\n",
+    "for N in range(Ns):\n",
+    "    coroas = N\n",
+    "    for sim in range(sims):\n",
+    "        while coroas!=0:\n",
+    "            valor = np.random.randint(2)\n",
+    "            lancamentos[N] += 1\n",
+    "            if valor == 0:\n",
+    "                coroas -= 1\n",
+    "plt.plot(range(Ns),lancamentos)"
    ]
   },
   {
