--- a/P1/P1.ipynb
+++ b/P1/P1.ipynb
@@ -437,7 +437,44 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as npimport matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
+    "paises = [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Br\", \"Pe\", \"Bo\", \"Ch\", \"A\", \"U\", \"Pa\", \"E\"]\n",
+    "grafo = {\n",
+    "    \"FG\": [\"Br\", \"S\"],\n",
+    "    \"S\": [\"FG\", \"G\", \"Br\"],\n",
+    "    \"G\": [\"S\", \"V\", \"Br\"],\n",
+    "    \"V\": [\"G\", \"Co\", \"Br\"],\n",
+    "    \"Co\": [\"V\", \"E\", \"Pe\", \"Br\"],\n",
+    "    \"Br\": [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Pe\", \"Bo\", \"Pa\", \"A\", \"U\"],\n",
+    "    \"Pe\": [\"E\", \"Co\", \"Br\", \"Bo\", \"Ch\"],\n",
+    "    \"Bo\": [\"Pe\", \"Br\", \"Pa\", \"A\", \"Ch\"],\n",
+    "    \"Ch\": [\"Pe\", \"Bo\", \"A\"],\n",
+    "    \"A\": [\"Ch\", \"Bo\", \"Pa\", \"Br\", \"U\"],\n",
+    "    \"U\": [\"A\", \"Br\"],\n",
+    "    \"Pa\": [\"Bo\", \"Br\", \"A\"],\n",
+    "    \"E\": [\"Co\", \"Pe\"]\n",
+    "}\n",
+    "\n",
+    "def monta_matriz(grafo=grafo, paises=paises):\n",
+    "    qtd_paises = len(paises)\n",
+    "    matrix = np.zeros((qtd_paises,qtd_paises))\n",
+    "    \n",
+    "    for index,pais in enumerate(paises):\n",
+    "        adj = grafo[pais]\n",
+    "        tam_adj = len(adj)\n",
+    "        parcela = 1/tam_adj\n",
+    "        for v in adj:\n",
+    "            pos = paises.index(v)\n",
+    "            matrix[index][pos] = parcela\n",
+    "    return matrix\n",
+    "\n",
+    "matrix = monta_matriz()\n",
+    "index_br = paises.index(\"Br\")\n",
+    "prob = matrix_power(matrix, 1000)\n",
+    "prob = prob[index_br][:]\n",
+    "print(prob)\n",
     "\n",
     "sims = 10000\n",
     "passos = [0]*sims\n",
@@ -535,14 +572,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.000000000000028\n",
       "[0.04 0.06 0.06 0.06 0.08 0.2  0.1  0.1  0.06 0.1  0.04 0.06 0.04]\n"
      ]
     }
@@ -585,7 +621,6 @@
     "index_br = paises.index(\"Br\")\n",
     "prob = matrix_power(matrix, 1000)\n",
     "prob = prob[index_br][:]\n",
-    "print(sum(prob))\n",
     "print(prob)"
    ]
   },
@@ -612,16 +647,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3183333333333333\n",
-      "0.16711111111111115\n",
-      "0.22892777777777776\n"
+      "A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 passos é: 31.83333333333333%\n",
+      "A probabilidade de estar agora no Brasil e voltar para o Brasil em 3 passos é: 16.711111111111116%\n",
+      "A probabilidade de estar agora no Brasil e voltar para o Brasil em 4 passos é: 22.892777777777777%\n"
      ]
     }
    ],
@@ -665,9 +700,9 @@
     "matrix2 = matrix_power(matrix,2)\n",
     "matrix3 = matrix_power(matrix,3)\n",
     "matrix4 = matrix_power(matrix,4)\n",
-    "print(matrix2[br][br])\n",
-    "print(matrix3[br][br])\n",
-    "print(matrix4[br][br])"
+    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 passos é: {100*matrix2[br][br]}%')\n",
+    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 3 passos é: {100*matrix3[br][br]}%')\n",
+    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 4 passos é: {100*matrix4[br][br]}%')"
    ]
   },
   {
@@ -679,24 +714,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
-      "0.94\n",
-      "0.9556666666666667\n",
-      "0.9426\n",
-      "0.9452555555555555\n",
-      "0.9418661481481482\n",
-      "0.9420170506172839\n",
-      "0.9409861899588478\n",
-      "0.9408333142565157\n",
-      "0.9404735977598536\n",
-      "0.5912912635358524\n"
+      "A probabildiade de em uma caminhada de 10 passos comecando no Brasil nao passar pelo Chile é de 59.129126353585235%\n"
      ]
     }
    ],
@@ -742,7 +767,7 @@
     "for i in range(1,11):\n",
     "    matrix_pow = matrix_power(matrix,i)\n",
     "    valor *= 1-matrix_pow[br][ch]\n",
-    "print(valor)"
+    "print(f'A probabildiade de em uma caminhada de 10 passos comecando no Brasil nao passar pelo Chile é de {100*valor}%')"
    ]
   },
   {
