--- a/P1/P1.ipynb
+++ b/P1/P1.ipynb
@@ -572,20 +572,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.04 0.06 0.06 0.06 0.08 0.2  0.1  0.1  0.06 0.1  0.04 0.06 0.04]\n"
+      "A probabilidade de após um grande número de passos o turista estar no brasil é de 0.1923\n"
      ]
     }
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
+    "sims = 10000\n",
+    "passos = 1000\n",
     "\n",
     "paises = [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Br\", \"Pe\", \"Bo\", \"Ch\", \"A\", \"U\", \"Pa\", \"E\"]\n",
     "grafo = {\n",
@@ -618,10 +621,18 @@
     "    return matrix\n",
     "\n",
     "matrix = monta_matriz()\n",
-    "index_br = paises.index(\"Br\")\n",
-    "prob = matrix_power(matrix, 1000)\n",
-    "prob = prob[index_br][:]\n",
-    "print(prob)"
+    "\n",
+    "ct = 0\n",
+    "for sim in range(sims):\n",
+    "    # TANTO FAZ O COMECO\n",
+    "    start = np.random.choice(paises)    \n",
+    "    for passo in range(passos):\n",
+    "        adj = grafo[start]\n",
+    "        start = np.random.choice(adj)\n",
+    "    if start == \"Br\": ct += 1\n",
+    "prob = ct/sims\n",
+    "\n",
+    "print(f'A probabilidade de após um grande número de passos o turista estar no brasil é de {prob}')"
    ]
   },
   {
@@ -633,37 +644,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "7.3 Qual a probabilidade de um turista que está agora no Brasil estar ainda no Brasil daqui 2, 3 ou 4 passos? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 passos é: 31.83333333333333%\n",
-      "A probabilidade de estar agora no Brasil e voltar para o Brasil em 3 passos é: 16.711111111111116%\n",
-      "A probabilidade de estar agora no Brasil e voltar para o Brasil em 4 passos é: 22.892777777777777%\n"
+      "A quantidade media de passos para visitar pelo menos uma vez cada país do grafo é 67.5484\n"
      ]
     }
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from numpy.linalg import matrix_power\n",
+    "\n",
+    "sims = 10000\n",
     "\n",
     "paises = [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Br\", \"Pe\", \"Bo\", \"Ch\", \"A\", \"U\", \"Pa\", \"E\"]\n",
     "grafo = {\n",
@@ -696,13 +692,91 @@
     "    return matrix\n",
     "\n",
     "matrix = monta_matriz()\n",
-    "br = paises.index(\"Br\")\n",
-    "matrix2 = matrix_power(matrix,2)\n",
-    "matrix3 = matrix_power(matrix,3)\n",
-    "matrix4 = matrix_power(matrix,4)\n",
-    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 passos é: {100*matrix2[br][br]}%')\n",
-    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 3 passos é: {100*matrix3[br][br]}%')\n",
-    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 4 passos é: {100*matrix4[br][br]}%')"
+    "\n",
+    "ct=0\n",
+    "for sim in range(sims):\n",
+    "    # TANTO FAZ O COMECO\n",
+    "    start = np.random.choice(paises)\n",
+    "    paises2 = [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Br\", \"Pe\", \"Bo\", \"Ch\", \"A\", \"U\", \"Pa\", \"E\"]\n",
+    "    while paises2:\n",
+    "        adj = grafo[start]\n",
+    "        start = np.random.choice(adj)\n",
+    "        if start in paises2:\n",
+    "            paises2.remove(start)\n",
+    "        ct+=1\n",
+    "prob = ct/sims\n",
+    "print(f'A quantidade media de passos para visitar pelo menos uma vez cada país do grafo é {prob}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.3 Qual a probabilidade de um turista que está agora no Brasil estar ainda no Brasil daqui 2, 3 ou 4 passos? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 passos é: 0.7138%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "sims = 10000\n",
+    "\n",
+    "paises = [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Br\", \"Pe\", \"Bo\", \"Ch\", \"A\", \"U\", \"Pa\", \"E\"]\n",
+    "grafo = {\n",
+    "    \"FG\": [\"Br\", \"S\"],\n",
+    "    \"S\": [\"FG\", \"G\", \"Br\"],\n",
+    "    \"G\": [\"S\", \"V\", \"Br\"],\n",
+    "    \"V\": [\"G\", \"Co\", \"Br\"],\n",
+    "    \"Co\": [\"V\", \"E\", \"Pe\", \"Br\"],\n",
+    "    \"Br\": [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Pe\", \"Bo\", \"Pa\", \"A\", \"U\"],\n",
+    "    \"Pe\": [\"E\", \"Co\", \"Br\", \"Bo\", \"Ch\"],\n",
+    "    \"Bo\": [\"Pe\", \"Br\", \"Pa\", \"A\", \"Ch\"],\n",
+    "    \"Ch\": [\"Pe\", \"Bo\", \"A\"],\n",
+    "    \"A\": [\"Ch\", \"Bo\", \"Pa\", \"Br\", \"U\"],\n",
+    "    \"U\": [\"A\", \"Br\"],\n",
+    "    \"Pa\": [\"Bo\", \"Br\", \"A\"],\n",
+    "    \"E\": [\"Co\", \"Pe\"]\n",
+    "}\n",
+    "\n",
+    "def monta_matriz(grafo=grafo, paises=paises):\n",
+    "    qtd_paises = len(paises)\n",
+    "    matrix = np.zeros((qtd_paises,qtd_paises))\n",
+    "    \n",
+    "    for index,pais in enumerate(paises):\n",
+    "        adj = grafo[pais]\n",
+    "        tam_adj = len(adj)\n",
+    "        parcela = 1/tam_adj\n",
+    "        for v in adj:\n",
+    "            pos = paises.index(v)\n",
+    "            matrix[index][pos] = parcela\n",
+    "    return matrix\n",
+    "\n",
+    "matrix = monta_matriz()\n",
+    "ct=0\n",
+    "for sim in range(sims):\n",
+    "    start = 'Br'\n",
+    "    for _ in range(4):\n",
+    "        adj = grafo[start]\n",
+    "        start = np.random.choice(adj)\n",
+    "        if start == 'Br':\n",
+    "            ct+=1\n",
+    "prob = ct/sims\n",
+    "\n",
+    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 passos é: {prob}%')"
    ]
   },
   {
@@ -714,21 +788,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabildiade de em uma caminhada de 10 passos comecando no Brasil nao passar pelo Chile é de 59.129126353585235%\n"
+      "A probabilidade de em uma caminhada de 10 passos começando no Brasil o turista não visite o Chile é de 0.6234\n"
      ]
     }
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from numpy.linalg import matrix_power\n",
+    "\n",
+    "sims = 100000\n",
     "\n",
     "paises = [\"FG\", \"S\", \"G\", \"V\", \"Co\", \"Br\", \"Pe\", \"Bo\", \"Ch\", \"A\", \"U\", \"Pa\", \"E\"]\n",
     "grafo = {\n",
@@ -761,13 +836,21 @@
     "    return matrix\n",
     "\n",
     "matrix = monta_matriz()\n",
-    "br = paises.index(\"Br\")\n",
-    "ch = paises.index(\"Ch\")\n",
-    "valor = 1\n",
-    "for i in range(1,11):\n",
-    "    matrix_pow = matrix_power(matrix,i)\n",
-    "    valor *= 1-matrix_pow[br][ch]\n",
-    "print(f'A probabildiade de em uma caminhada de 10 passos comecando no Brasil nao passar pelo Chile é de {100*valor}%')"
+    "ct=0\n",
+    "for sim in range(sims):\n",
+    "    start = 'Br'\n",
+    "    flag = True\n",
+    "    for _ in range(10):\n",
+    "        adj = grafo[start]\n",
+    "        start = np.random.choice(adj)\n",
+    "        if start == 'Ch':\n",
+    "            flag = False\n",
+    "            break\n",
+    "    if flag: \n",
+    "        ct += 1\n",
+    "    \n",
+    "prob = ct/sims\n",
+    "print(f'A probabilidade de em uma caminhada de 10 passos começando no Brasil o turista não visite o Chile é de {prob}')"
    ]
   },
   {
@@ -781,9 +864,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -791,7 +882,7 @@
     "NUM_ESPACOS = 40\n",
     "PROPRIEDADES = [1, 3, 4, 6, 8, 9, 11, 13, 14, 17, 19, 21, 23, 26, 28, 29, 31, 33, 34, 36, 38, 39]\n",
     "VA_PARA_PRISAO = 30\n",
-    "PRISAO = 10"
+    "PRISAO = 10\n"
    ]
   },
   {
