--- a/P1/P1.ipynb
+++ b/P1/P1.ipynb
@@ -776,7 +776,7 @@
     "            ct+=1\n",
     "prob = ct/sims\n",
     "\n",
-    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 passos é: {prob}%')"
+    "print(f'A probabilidade de estar agora no Brasil e voltar para o Brasil em 2 ou 3 ou 4 passos é: {prob}%')"
    ]
   },
   {
@@ -788,14 +788,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade de em uma caminhada de 10 passos começando no Brasil o turista não visite o Chile é de 0.6234\n"
+      "A probabilidade de em uma caminhada de 10 passos começando no Brasil o turista não visite o Chile é de 0.62438\n"
      ]
     }
    ],
@@ -845,7 +845,6 @@
     "        start = np.random.choice(adj)\n",
     "        if start == 'Ch':\n",
     "            flag = False\n",
-    "            break\n",
     "    if flag: \n",
     "        ct += 1\n",
     "    \n",
